--- a/index.html
+++ b/index.html
@@ -5649,7 +5649,7 @@ height: 510px;
           </div>
           </div>
           <div class="custImg">
-             <img src="images/testimonial_icon.webp" loading="" lazy="" height="" width="" alt="customer image not available" />
+             <img src="images/testimonial_icon_webp.webp" loading="" lazy="" height="" width="" alt="customer image not available" />
            </div>
            
     </div>       
